# python-web-development-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: index.html
task_manager/templates/registration/: login.html  signup.html
task_manager/templates/statuses/: create.html  delete.html  edit.html  index.html
task_manager/templates/tasks/: create.html  delete.html  index.html
task_manager/templates/users/: create.html  index.html
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
