[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Sergey Karpuk <sergeykarpuk@yandex.by>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0.6"

[tool.poetry.dev-dependencies]
gunicorn = "20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
