[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Sergey Karpuk <sergeykarpuk@yandex.by>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0.6"
django-heroku = "0.3.1"
python-dotenv = "^0.20.0"
gunicorn = "20.1.0"
django-bootstrap4 = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
